--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT = 3000
 MONGO_CONNECTION_URL = mongodb+srv://bdadmin:admin@loginjwt.l5y95ik.mongodb.net/?retryWrites=true&w=majority
+TOKEN_SECRET = "dsgsgsçlgjmlsgjgsgsg7s879797897"
